--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - "11210:11210"
 
   setup-couchbase:
-    image: harrymartland/couchbase-setup
+    image: harrymartland/docker-couchbase-setup
     environment:
       - COUCHBASE_HOST=couchbase
       - COUCHBASE_USERNAME=admin
@@ -17,6 +17,9 @@ services:
 
       - COUCHBASE_BUCKET_BUCKET1_NAME=bucket1
       - COUCHBASE_BUCKET_BUCKET1_PASSWORD=bucket1_pass
+      - COUCHBASE_BUCKET_BUCKET1_VIEWS=/opt/views
 
       - COUCHBASE_BUCKET_ANOTHER_BUCKET_NAME=bucket_number_2
       - COUCHBASE_BUCKET_ANOTHER_BUCKET_PASSWORD=
+    volumes:
+        - ./views:/opt/views
