--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,25 @@ services:
       - COUCHBASE_BUCKET_ANOTHER_BUCKET_PASSWORD=
     volumes:
         - ./views:/opt/views
+
+
+  couchbase5:
+    image: couchbase/server:5.0.0-beta2
+    ports:
+      - "9091:8091"
+
+  setup-couchbase5:
+    image: harrymartland/docker-couchbase-setup
+    environment:
+      - COUCHBASE_HOST=couchbase5
+      - COUCHBASE_USERNAME=admin
+      - COUCHBASE_PASSWORD=password
+
+      - COUCHBASE_BUCKET_BUCKET1_NAME=bucket1
+      - COUCHBASE_BUCKET_BUCKET1_PASSWORD=bucket1_pass
+      - COUCHBASE_BUCKET_BUCKET1_VIEWS=/opt/views
+
+      - COUCHBASE_BUCKET_ANOTHER_BUCKET_NAME=bucket_number_2
+      - COUCHBASE_BUCKET_ANOTHER_BUCKET_PASSWORD=
+    volumes:
+        - ./views:/opt/views
